DATAREDIS-525 - Hacking: Add tests for ReactiveKeyCommands.
- Introduce base class for testing.